--- a/public/index.html
+++ b/public/index.html
@@ -27,61 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Hoa thiêng</title>
-    <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
-    <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
-    <script type="text/javascript">
-    /* exported gapiLoaded */
-    /* exported gisLoaded */
-    /* exported handleAuthClick */
-    /* exported handleSignoutClick */
-
-    // TODO(developer): Set to client ID and API key from the Developer Console
-    const CLIENT_ID = '1082932819853-9qf58rfl4ttun3er9j4rodiajs5tfge9.apps.googleusercontent.com';
-    const API_KEY = 'AIzaSyCeT-p2itwSHLURIk5jECnM76X8TQNKNPw';
-
-    // Discovery doc URL for APIs used by the quickstart
-    const DISCOVERY_DOC = 'https://sheets.googleapis.com/$discovery/rest?version=v4';
-
-    // Authorization scopes required by the API; multiple scopes can be
-    // included, separated by spaces.
-    const SCOPES = 'https://www.googleapis.com/auth/spreadsheets';
-
-    window.tokenClient = null
-    window.gapiInited = false;
-    window.gisInited = false;
-
-    /**
-     * Callback after api.js is loaded.
-     */
-    function gapiLoaded() {
-      gapi.load('client', initializeGapiClient);
-    }
-
-    /**
-     * Callback after the API client is loaded. Loads the
-     * discovery doc to initialize the API.
-     */
-    async function initializeGapiClient() {
-      await gapi.client.init({
-        apiKey: API_KEY,
-        discoveryDocs: [DISCOVERY_DOC],
-      });
-      window.gapiInited = true;
-    }
-
-    /**
-     * Callback after Google Identity Services are loaded.
-     */
-    function gisLoaded() {
-      window.tokenClient = google.accounts.oauth2.initTokenClient({
-        client_id: CLIENT_ID,
-        scope: SCOPES,
-        callback: '', // defined later
-      });
-      window.gisInited = true;
-    }
-  </script>
+    <title>VAR</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
